--- a/sideproject_firebase/socialClubApp/public/stylesheets/style.css
+++ b/sideproject_firebase/socialClubApp/public/stylesheets/style.css
@@ -54,7 +54,8 @@ body {
 /* clubList */
 .club-container {
   display: flex;
-  padding: 10px;
+  padding: 10px;  
+  cursor: pointer;
 }
 .thumbnail {
   max-width: 200px;
@@ -99,4 +100,20 @@ body {
   margin: 10px 0 10px 0;
   text-align: center;
   font-size: 30px;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-evenly; 
+  list-style: none; 
+  padding: 0; 
+}
+
+.nav-item {
+  margin-right: 20px;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: #333;
 }
