--- a/sideproject_firebase/socialClubApp/views/home.ejs
+++ b/sideproject_firebase/socialClubApp/views/home.ejs
@@ -104,13 +104,13 @@
 </ul>
 
 <script>
-  $(".container #study").on("click",(e)=>location.href = "/clubList/:study")
-  $(".container #sports").on("click",(e)=>location.href = "/clubList/:sports")
-  $(".container #pet").on("click",(e)=>location.href = "/clubList/:pet")
-  $(".container #vehicle").on("click",(e)=>location.href = "/clubList/:vehicle")
-  $(".container #game").on("click",(e)=>location.href = "/clubList/:game")
-  $(".container #crafts").on("click",(e)=>location.href = "/clubList/:crafts")
-  $(".container #beauty").on("click",(e)=>location.href = "/clubList/:beauty")
-  $(".container #music").on("click",(e)=>location.href = "/clubList/:music")
-  $(".container #book").on("click",(e)=>location.href = "/clubList/:book")
+  $(".container #study").on("click",(e)=>location.href = "/clubList/study")
+  $(".container #sports").on("click",(e)=>location.href = "/clubList/sports")
+  $(".container #pet").on("click",(e)=>location.href = "/clubList/pet")
+  $(".container #vehicle").on("click",(e)=>location.href = "/clubList/vehicle")
+  $(".container #game").on("click",(e)=>location.href = "/clubList/game")
+  $(".container #crafts").on("click",(e)=>location.href = "/clubList/crafts")
+  $(".container #beauty").on("click",(e)=>location.href = "/clubList/beauty")
+  $(".container #music").on("click",(e)=>location.href = "/clubList/music")
+  $(".container #book").on("click",(e)=>location.href = "/clubList/book")
 </script>
