--- a/sideproject_firebase/socialClubApp/public/stylesheets/style.css
+++ b/sideproject_firebase/socialClubApp/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 *{
   box-sizing: border-box;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 body {
   padding: 5%;
@@ -116,4 +116,23 @@ body {
 .nav-link {
   text-decoration: none;
   color: #333;
+}
+
+.current-clubInfo {
+  box-sizing: border-box;  
+  overflow: auto;
+}
+
+.club-name {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.club-info {
+  text-align: left;
+  word-break:break-all;
+  box-sizing: border-box;
+  margin: 10px;
+  /* border: 3px solid gray; */
 }
