--- a/sideproject_firebase/socialClubApp/views/header.ejs
+++ b/sideproject_firebase/socialClubApp/views/header.ejs
@@ -9,6 +9,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="">Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/create">모임만들기</a>
+        </li>
       </ul>
       <div class="d-flex">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
