--- a/sideproject_firebase/socialClubApp/views/index.ejs
+++ b/sideproject_firebase/socialClubApp/views/index.ejs
@@ -6,12 +6,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.js"></script>
   </head>
   <body>
     <div class="container">
       <%-include("header.ejs")%>
       <%-include(pageName)%>
       <%-include("footer.ejs")%>
+      <!-- 글쓰기에서 유효성체크 후 알림 처리 모달 추가 -->
+      <%-include("common/modal_alert.ejs")%>
+      <%-include("common/modal_confirm.ejs")%>
+    </div>
     </div>
   </body>
   <script>
